tests/cases/fail/dict_unsupported_value_type.p4
import io

def main() -> None:
    data: dict[str, list[io.File]] = {}
